Correctly rename remnants of othermodule. Add a global testsuite that runs all tests.

--- a/module/BUILD
+++ b/module/BUILD
@@ -1,12 +1,12 @@
 scala_library(
-    name = "othermodule",
+    name = "module",
     srcs = glob(["src/main/scala/module/*.scala"]),
     visibility = ["//app:__pkg__"],
     deps = [],
 )
 
 scala_test(
-    name = "test-othermodule",
+    name = "test-module",
     srcs = ["src/test/scala/module/WorkerSpec.scala"],
     visibility = ["//visibility:private"],
     deps = [":module"],
