Add sha256 for all libraries, and also load them separately in dependencies.

--- a/app/BUILD
+++ b/app/BUILD
@@ -7,6 +7,10 @@ scala_library(
         "@beautiful-scala",
         "@joda-time",
         "@play",
+        "@play-ws",
+        "@play-json",
+        "@play-slick",
+        "@play-twirl",
         "@scala-js",
         "@scalaz",
     ],
