Fix the play framework dependency and compiler issues.

--- a/app/BUILD
+++ b/app/BUILD
@@ -5,12 +5,13 @@ scala_library(
     deps = [
         "//module",
         "@beautiful-scala",
+        "@javax-inject",
         "@joda-time",
         "@play",
-        "@play-ws",
         "@play-json",
         "@play-slick",
         "@play-twirl",
+        "@play-ws",
         "@scala-js",
         "@scalaz",
     ],
