Add play-ahc-ws dependency Bundle all the playframework dependencies in one function.

--- a/app/BUILD
+++ b/app/BUILD
@@ -8,6 +8,7 @@ scala_library(
         "@javax-inject",
         "@joda-time",
         "@play",
+        "@play-ahc-ws",
         "@play-json",
         "@play-slick",
         "@play-twirl",
