Add all dependencies for Play WS (Web Services)

--- a/app/BUILD
+++ b/app/BUILD
@@ -13,6 +13,9 @@ scala_library(
         "@play-slick",
         "@play-twirl",
         "@play-ws",
+        "@play-ws-standalone",
+        "@play-ws-standalone-json",
+        "@play-ws-standalone-xml",
         "@scala-js",
         "@scalaz",
     ],
