Common out the play targets into a scala library for easier dependency management.

--- a/app/BUILD
+++ b/app/BUILD
@@ -4,18 +4,10 @@ scala_library(
     visibility = ["//:__pkg__"],
     deps = [
         "//module",
+        "//third_party/play_framework:play-framework",
         "@beautiful-scala",
         "@javax-inject",
         "@joda-time",
-        "@play",
-        "@play-ahc-ws",
-        "@play-json",
-        "@play-slick",
-        "@play-twirl",
-        "@play-ws",
-        "@play-ws-standalone",
-        "@play-ws-standalone-json",
-        "@play-ws-standalone-xml",
         "@scala-js",
         "@scalaz",
     ],
