Successfully added scala-guice dependency using maven_install. In progress for converting other targets.

--- a/app/BUILD
+++ b/app/BUILD
@@ -11,13 +11,16 @@ scala_library(
 scala_library(
     name = "controllers",
     srcs = [
+        "src/main/scala/Module.scala",
         "src/main/scala/controllers/HomeController.scala",
         ":routes-basic",
     ],
     deps = [
         "//module",
+        "//third_party/akka",
+        "//third_party/beautiful_scala:beautiful-scala",
         "//third_party/play_framework:play-framework",
-        "@beautiful-scala",
+        "//third_party/scala_guice:scala-guice",
         "@javax-inject",
         "@joda-time",
         "@scala-js",
