Fix issues with tests. 1. Rename the MainSpec class to HomeControllerSpec 2. Add dependent libraries: scalatestplus, play-test etc. 3. Refactor the controller class unit tests as per the link: https://www.playframework.com/documentation/2.8.x/ScalaTestingWithScalaTest

--- a/app/BUILD
+++ b/app/BUILD
@@ -57,8 +57,13 @@ play_routes(
 )
 
 scala_test(
-    name = "test-app",
-    srcs = ["src/test/scala/controllers/MainSpec.scala"],
+    name = "test-controllers",
+    srcs = ["src/test/scala/controllers/HomeControllerSpec.scala"],
     visibility = ["//visibility:private"],
-    deps = [":app_lib"],
+    deps = [
+        ":controllers",
+        "//third_party/play_framework:play-framework",
+        #        "@scalactic",
+        "@scalatest",
+    ],
 )
