Fixed issues with play dependencies.
1. Updated rules_scala version.
2. Configured the scala test libraries with rules_scala itself, as per instructions here:
https://github.com/bazelbuild/rules_scala
3. Added selenium dependencies, which was needed by play test framework.

--- a/app/BUILD
+++ b/app/BUILD
@@ -63,7 +63,6 @@ scala_test(
     deps = [
         ":controllers",
         "//third_party/play_framework:play-framework",
-        #        "@scalactic",
-        "@scalatest",
+        "//third_party/selenium",
     ],
 )
